pngparse: Don't try to set framerate if not from upstream

https://bugzilla.gnome.org/show_bug.cgi?id=715166